fix color and overlap length text

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -31,6 +31,7 @@
     justify-content: space-between;
     height: 100%;
     width: 100%;
+    color: black;
   }
 
   .input-group {
@@ -55,6 +56,7 @@
     border-radius: 0.5rem;
     padding: 0.25rem 0.5rem;
     font-size: 1.1rem;
+    color: black;
     background-color: #facc15;
   }
 
@@ -150,6 +152,7 @@
     justify-content: space-between;
     background-color: white;
     border: 2px solid #b9b9b9;
+    color: black;
   }
   
   #triangle-suggestion-button-zone {
